// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdvancedSearchRow should render default view 1`] = `
<div
  className="columns is-gapless is-mobile is-multiline advancedSearchRow"
>
  <div
    className="column is-4-tablet"
  >
    <SelectField
      autoWidth={false}
      disabled={false}
      errorText="Please select a field to search"
      fullWidth={true}
      multiple={false}
      onChange={[Function]}
      value="0"
    >
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={true}
        focusState="none"
        insetChildren={false}
        key="0"
        primaryText="Select a field"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="0"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="all"
        primaryText="Any field"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="all"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="rek_title"
        primaryText="Title"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="rek_title"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="rek_pid"
        primaryText="PID"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="rek_pid"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="rek_author"
        primaryText="Author Name"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="rek_author"
      />
    </SelectField>
  </div>
  <div
    className="column is-narrow spacer"
  />
  <div
    className="column input is-12-mobile"
  >
    <AdvancedSearchRowInput
      disabledFields={Array []}
      inputField={
        Object {
          "combiner": null,
          "hint": "Select a field to search on",
          "title": "Select a field",
          "type": "TextField",
          "validation": Array [],
        }
      }
      onSearchRowChange={[MockFunction]}
      onSearchRowDelete={[MockFunction]}
      rowIndex={0}
      searchField="0"
      value=""
    />
  </div>
</div>
`;

exports[`AdvancedSearchRow should render search field row with given disabled options 1`] = `
<div
  className="columns is-gapless is-mobile is-multiline advancedSearchRow"
>
  <div
    className="column is-4-tablet"
  >
    <SelectField
      autoWidth={false}
      disabled={false}
      errorText={null}
      fullWidth={true}
      multiple={false}
      onChange={[Function]}
      value="all"
    >
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={true}
        focusState="none"
        insetChildren={false}
        key="0"
        primaryText="Select a field"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="0"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={true}
        focusState="none"
        insetChildren={false}
        key="all"
        primaryText="Any field"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="all"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="rek_title"
        primaryText="Title"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="rek_title"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="rek_pid"
        primaryText="PID"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="rek_pid"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="rek_author"
        primaryText="Author Name"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="rek_author"
      />
    </SelectField>
  </div>
  <div
    className="column is-narrow combiner"
  >
    <span>
      contains
    </span>
  </div>
  <div
    className="column input is-12-mobile"
  >
    <AdvancedSearchRowInput
      disabledFields={
        Array [
          "all",
          0,
        ]
      }
      inputField={
        Object {
          "combiner": "contains",
          "hint": "Add some text to search all fields with",
          "title": "Any field",
          "type": "TextField",
          "validation": Array [
            "maxLength500",
          ],
        }
      }
      onSearchRowChange={[MockFunction]}
      onSearchRowDelete={[MockFunction]}
      rowIndex={0}
      searchField="all"
      value="i feel lucky"
    />
  </div>
</div>
`;

exports[`AdvancedSearchRow should render search field row with select field and search text 1`] = `
<div
  className="columns is-gapless is-mobile is-multiline advancedSearchRow"
>
  <div
    className="column is-4-tablet"
  >
    <SelectField
      autoWidth={false}
      disabled={false}
      errorText={null}
      fullWidth={true}
      multiple={false}
      onChange={[Function]}
      value="all"
    >
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={true}
        focusState="none"
        insetChildren={false}
        key="0"
        primaryText="Select a field"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="0"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="all"
        primaryText="Any field"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="all"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="rek_title"
        primaryText="Title"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="rek_title"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="rek_pid"
        primaryText="PID"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="rek_pid"
      />
      <MenuItem
        anchorOrigin={
          Object {
            "horizontal": "right",
            "vertical": "top",
          }
        }
        checked={false}
        desktop={false}
        disabled={false}
        focusState="none"
        insetChildren={false}
        key="rek_author"
        primaryText="Author Name"
        targetOrigin={
          Object {
            "horizontal": "left",
            "vertical": "top",
          }
        }
        value="rek_author"
      />
    </SelectField>
  </div>
  <div
    className="column is-narrow combiner"
  >
    <span>
      contains
    </span>
  </div>
  <div
    className="column input is-12-mobile"
  >
    <AdvancedSearchRowInput
      disabledFields={Array []}
      inputField={
        Object {
          "combiner": "contains",
          "hint": "Add some text to search all fields with",
          "title": "Any field",
          "type": "TextField",
          "validation": Array [
            "maxLength500",
          ],
        }
      }
      onSearchRowChange={[MockFunction]}
      onSearchRowDelete={[MockFunction]}
      rowIndex={0}
      searchField="all"
      value="i feel lucky"
    />
  </div>
</div>
`;
